select element spacing corrected

--- a/front-end/styles/style.css
+++ b/front-end/styles/style.css
@@ -128,3 +128,7 @@ body {
   font-family: "Orbitron", sans-serif;
   font-size: medium;
 }
+
+#numberInput {
+  max-width: 80%;
+}
